--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "cz-conventional-changelog": "3.3.0",
     "typescript": "^4.9.3",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
   },
